syntax = "proto3";
package cores;

option go_package = "github.com/snple/kirara/pb/cores;cores";

import "source_message.proto";
import "generic_message.proto";

service ControlService {
    rpc GetTagValue(pb.Id) returns (pb.TagValue) {}
    rpc SetTagValue(pb.TagValue) returns (pb.TagValue) {}
}
